<resources>
    <string name="app_name">집사의 노트</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="exit_dialog">앱을 종료하시겠습니까?</string>
    <string name="user_session">UserSession</string>
    <string name="pref_name_pet_list_id_order">PetListIdOrder</string>
    <string name="data_name_pet_list_id_order">pet_list_id_order</string>
    <string name="pref_name_byte_arrays">ByteArrays</string>
    <string name="data_name_my_pet_selected_pet_photo">my_pet_selected_pet_photo</string>
    <string name="data_name_setting_selected_account_photo">setting_selected_account_photo</string>
    <string name="fail_request">요청에 실패하였습니다.</string>
    <string name="try_again">잠시후 다시 시도해주세요.</string>
    <string name="photo_file_type_exception_message">이미지 파일 확장자는 jpg, png, jpeg, gif, webp만 지원해요!</string>
    <string name="video_file_type_exception_message">동영상 파일 확장자는 mp4, webm만 지원해요!</string>
    <string name="general_file_type_exception_message">일반 파일 확장자는 doc, docx, hwp, pdf, txt, ppt, pptx,
        psd, ai, xls, xlsx, rar, tar, zip, exe, apk만 지원해요!</string>
    <string name="general_file_type_exception_for_start_message">지원하지 않는 확장자입니다!</string>
    <string name="title_my_pet">마이펫</string>
    <string name="title_map">지도</string>
    <string name="title_community">커뮤니티</string>
    <string name="title_setting">설정</string>
    <string name="login_button">로그인</string>
    <string name="divider">|</string>
    <string name="recovery_button">ID/PW 찾기</string>
    <string name="login_failed">아이디 또는 비밀번호가 일치하지 않아요!</string>
    <string name="create_account_success">회원가입 성공~ 로그인 후 이용해 주세요!</string>
    <string name="previous_step_button">이전</string>
    <string name="next_step_button">다음</string>
    <string name="create_account_button">회원가입</string>
    <string name="return_to_login_dialog">회원가입을 취소하고 로그인 화면으로 돌아갈까요?</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="terms_title">서비스 이용약관</string>
    <string name="select_all_check_box">약관 전체동의</string>
    <string name="terms_check_box">이용약관 동의(필수)</string>
    <string name="privacy_check_box">개인정보 수집 및 이용 동의(필수)</string>
    <string name="marketing_check_box">마케팅 및 광고성 정보 수신 동의(선택)</string>
    <string name="id_pw_title">아이디 / 비밀번호</string>
    <string name="id_hint">아이디</string>
    <string name="pw_hint">비밀번호</string>
    <string name="pw_check_hint">비밀번호 확인</string>
    <string name="id_message">5~16자의 영문 소문자, 숫자만 사용 가능해요!</string>
    <string name="id_message_overlap">이미 사용중인 아이디에요!</string>
    <string name="pw_message">8~20자의 영문, 숫자, 특수문자(!@.#$%^&amp;*?_~)만 사용 가능해요!</string>
    <string name="pw_check_message">비밀번호가 일치하지 않아요!</string>
    <string name="code_message">아이디 및 인증코드가 일치하지 않습니다.</string>
    <string name="user_info_title">사용자 정보</string>
    <string name="phone_hint">전화번호</string>
    <string name="email_hint">이메일</string>
    <string name="request_email_code_button">인증요청</string>
    <string name="email_code_hint">인증번호 입력</string>
    <string name="phone_message">(-)을 포함한 휴대폰 번호 형식으로 작성해 주세요!</string>
    <string name="phone_message_overlap">이미 사용중인 휴대폰 번호에요!</string>
    <string name="email_message">이메일 주소 형식으로 작성해 주세요!</string>
    <string name="email_message_overlap">이미 사용중인 이메일 주소에요!</string>
    <string name="email_code_sent">인증번호를 발송 했어요!</string>
    <string name="email_message_code_valid">이메일 인증 완료!</string>
    <string name="email_message_code_invalid">인증번호가 일치하지 않아요!</string>
    <string name="email_message_request">이메일 인증을 해주세요!</string>
    <string name="email_code_chronometer_label">남은 시간:</string>
    <string name="recovery_title">아이디 / 비밀번호 찾기</string>
    <string name="recover_username">아이디 찾기</string>
    <string name="recover_username_result_title">아이디 찾기 결과 안내</string>
    <string name="recover_username_result_description">회원님의 아이디는 다음과 같습니다.</string>
    <string name="recover_password">비밀번호 찾기</string>
    <string name="recover_password_email_input_button">인증코드 전송</string>
    <string name="recover_password_result_title">비밀번호 찾기 결과 안내</string>
    <string name="recover_password_result_description">회원님의 임시 비밀번호를 이메일로 전송하였습니다. 로그인 후 비밀번호를 꼭 변경해주세요.</string>
    <string name="pet_manager_title">반려동물 관리</string>
    <string name="create_pet_title">펫 추가</string>
    <string name="update_pet_title">펫 정보 수정</string>
    <string name="pet_message">상태메시지</string>
    <string name="pet_name_label">이름</string>
    <string name="pet_name_hint">예) 코코</string>
    <string name="pet_gender_label">성별</string>
    <string name="pet_gender_female">암</string>
    <string name="pet_gender_female_symbol">♀</string>
    <string name="pet_gender_male">수</string>
    <string name="pet_gender_male_symbol">♂</string>
    <string name="pet_species_label">동물 종</string>
    <string name="pet_species_hint">예) 강아지</string>
    <string name="pet_breed_label">품종</string>
    <string name="pet_breed_hint">예) 푸들</string>
    <string name="pet_birth_label">생년월일</string>
    <string name="pet_birth_only_year_label">출생 연도만 알고 있어요!</string>
    <string name="confirm_create_pet">확인</string>
    <string name="create_pet_successful">펫을 추가했어요!</string>
    <string name="update_pet_successful">펫 정보가 수정되었어요!</string>
    <string name="pet_profile_title">펫 프로필</string>
    <string name="update_pet_button">수정</string>
    <string name="delete_pet_button">삭제하기</string>
    <string name="delete_pet_dialog_message">펫을 삭제할까요?</string>
    <string name="delete_pet_successful">펫이 삭제되었어요!</string>
    <string name="set_representative_button">대표로 설정</string>
    <string name="set_representative_message">을(를) 대표펫으로 설정할까요?</string>
    <string name="empty_pet_list_notification">아직 반려동물이 추가되지 않았어요.\n나의 반려동물을 추가해보세요!</string>
    <string name="filled_heart">♥</string>
    <string name="age">나이</string>
    <string name="birth">생일</string>
    <string name="gender">성별</string>
    <string name="skip_button">SKIP</string>
    <string name="welcome_page1_description_title">프로필을 등록하세요.</string>
    <string name="welcome_page1_description_content">자신만의 프로필을 꾸며보세요!</string>
    <string name="welcome_page1_decline_button">다음에 할게요</string>
    <string name="welcome_page1_accept_button">좋아요!</string>
    <string name="pet_schedule_manager_title">일정 관리</string>
    <string name="pet_schedule_create_title">일정 추가</string>
    <string name="pet_schedule_update_title">일정 편집</string>
    <string name="pet_name_list_title">반려동물을 선택하세요.</string>
    <string name="memo_title">메모</string>
    <string name="empty_pet_schedule_list_notification">아직 일정이 추가되지 않았어요.\n반려동물을 위한 일정을 추가해보세요!</string>
    <string name="cafe">카페</string>
    <string name="grooming">미용</string>
    <string name="shop">샵</string>
    <string name="hospital">병원</string>
    <string name="preferences_title">설정</string>
    <string name="info_version_title">버전 및 정보</string>
    <string name="storage_title">저장소</string>
    <string name="preferences">환경 설정</string>
    <string name="notification_preferences">알림 설정</string>
    <string name="theme_preferences">테마 설정</string>
    <string name="delete_temporary_files_button">임시파일 삭제</string>
    <string name="delete_temporary_files_message">임시파일을 삭제할까요?</string>
    <string name="privacy_terms">개인정보 처리방침</string>
    <string name="usage_terms">서비스 이용약관</string>
    <string name="license">라이센스</string>
    <string name="version_title">현재 버전</string>
    <string name="version">0.0.1</string>
    <string name="preference_file_key">com.sju18.petmanagement.PREFERENCE_FILE_KEY</string>
    <string name="map_radius">지도 반경 설정</string>
    <string name="feed_notification">피드 알림</string>
    <string name="info_notification">정보 알림</string>
    <string name="ad_notification">광고 알림</string>
    <string name="saved_theme_preference_key">theme_preference_key</string>
    <string name="light_theme">라이트 테마</string>
    <string name="dark_theme">다크 테마</string>
    <string name="system_theme">시스템 테마</string>
    <string name="privacy_terms_title">개인정보처리방침</string>
    <string name="account_photo_type_select">사진 유형 선택</string>
    <string name="account_photo_by_gallery">갤러리 이미지</string>
    <string name="account_photo_by_default">기본 이미지</string>
</resources>