<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/notification_preferences">
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_1"
            android:title="@string/feed_notification"
            app:allowDividerAbove="true" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_2"
            android:title="@string/feed_notification"
            app:allowDividerAbove="true" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_1"
            android:title="@string/ad_notification"
            app:allowDividerAbove="true" />
    </PreferenceCategory>
</PreferenceScreen>