<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_create_account_credentials_parent_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:layout_gravity="center"
    android:windowSoftInputMode="adjustResize"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:text="@string/id_pw_title"
            android:textSize="32sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="4dp"
                android:inputType="textPersonName"
                android:hint="@string/id_hint"
                android:theme="@style/onSelectedThemeCarrot"/>

            <TextView
                android:id="@+id/username_message"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:visibility="gone"
                android:text="@string/id_message"
                android:textSize="12sp"
                android:textColor="@android:color/holo_red_dark"/>

            <TextView
                android:id="@+id/username_message_overlap"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:visibility="gone"
                android:text="@string/id_message_overlap"
                android:textSize="12sp"
                android:textColor="@android:color/holo_red_dark"/>

            <EditText
                android:id="@+id/pw_edit_text"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="4dp"
                android:inputType="textPassword"
                android:hint="@string/pw_hint"
                android:theme="@style/onSelectedThemeCarrot"/>

            <TextView
                android:id="@+id/pw_message"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:visibility="gone"
                android:text="@string/pw_message"
                android:textSize="12sp"
                android:textColor="@android:color/holo_red_dark"/>

            <EditText
                android:id="@+id/pw_check_edit_text"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="4dp"
                android:inputType="textPassword"
                android:hint="@string/pw_check_hint"
                android:theme="@style/onSelectedThemeCarrot"/>

            <TextView
                android:id="@+id/pw_check_message"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:visibility="gone"
                android:text="@string/pw_check_message"
                android:textSize="12sp"
                android:textColor="@android:color/holo_red_dark"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>