<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_my_pet">

    <fragment
        android:id="@+id/navigation_my_pet"
        android:name="com.sju18001.petmanagement.ui.myPet.MyPetFragment"
        android:label="@string/title_my_pet"
        tools:layout="@layout/fragment_my_pet" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.sju18001.petmanagement.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.sju18001.petmanagement.ui.community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.sju18001.petmanagement.ui.myPage.MyPageFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_my_page" />
</navigation>