<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/user_info_title"
        android:textSize="32dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_perm_contact_calendar_24"
            android:drawablePadding="4dp"
            android:inputType="textPersonName"
            android:hint="@string/name_hint"
            android:theme="@style/onSelectedThemeCarrot"/>

        <TextView
            android:id="@+id/name_message"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:visibility="gone"
            android:text="@string/name_message"
            android:textSize="12dp"
            android:textColor="@android:color/holo_red_dark"/>

        <EditText
            android:id="@+id/phone_edit_text"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawablePadding="4dp"
            android:inputType="phone"
            android:hint="@string/phone_hint"
            android:theme="@style/onSelectedThemeCarrot"/>

        <TextView
            android:id="@+id/phone_message"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:visibility="gone"
            android:text="@string/phone_message"
            android:textSize="12dp"
            android:textColor="@android:color/holo_red_dark"/>

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="4dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:theme="@style/onSelectedThemeCarrot"/>

        <TextView
            android:id="@+id/email_message"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:visibility="gone"
            android:text="@string/email_message"
            android:textSize="12dp"
            android:textColor="@android:color/holo_red_dark"/>

        <LinearLayout
            android:id="@+id/verify_email_layout"
            android:layout_width="280dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/request_email_code_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:enabled="false"
                android:textSize="12dp"
                android:text="@string/request_email_code_button"/>

            <EditText
                android:id="@+id/email_code_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:enabled="false"
                android:hint="@string/email_code_hint"
                android:textSize="12dp"
                android:background="@drawable/edittext_rectangle"
                android:theme="@style/onSelectedThemeCarrot"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>