<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_create_account_user_info_parent_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:layout_gravity="center"
    android:windowSoftInputMode="adjustResize"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:text="@string/user_info_title"
            android:textSize="32sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:drawablePadding="4dp"
                android:inputType="phone"
                android:hint="@string/phone_hint"
                android:theme="@style/onSelectedThemeCarrot"/>

            <TextView
                android:id="@+id/phone_message"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:visibility="gone"
                android:text="@string/phone_message"
                android:textSize="12sp"
                android:textColor="@android:color/holo_red_dark"/>

            <TextView
                android:id="@+id/phone_message_overlap"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:visibility="gone"
                android:text="@string/phone_message_overlap"
                android:textSize="12sp"
                android:textColor="@android:color/holo_red_dark"/>

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="4dp"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:hint="@string/email_hint"
                android:theme="@style/onSelectedThemeCarrot"/>

            <TextView
                android:id="@+id/email_message"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:visibility="gone"
                android:text="@string/email_message"
                android:textSize="12sp"
                android:textColor="@android:color/holo_red_dark"/>

            <TextView
                android:id="@+id/email_message_overlap"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:visibility="gone"
                android:text="@string/email_message_overlap"
                android:textSize="12sp"
                android:textColor="@android:color/holo_red_dark"/>

            <LinearLayout
                android:id="@+id/verify_email_layout"
                android:layout_width="280dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/request_email_code_button"
                        android:layout_width="108dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:enabled="false"
                        android:textSize="16sp"
                        android:text="@string/request_email_code_button"/>

                    <ProgressBar
                        android:id="@+id/request_email_code_progress_bar"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:visibility="gone"
                        android:indeterminateTint="@color/carrot"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

                <EditText
                    android:id="@+id/email_code_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/email_code_hint"
                    android:inputType="number"
                    android:maxLength="8"
                    android:textSize="16sp"
                    android:background="@drawable/edit_text_rectangle"
                    android:theme="@style/onSelectedThemeCarrot"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/email_message_code_valid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="4dp"
                    android:visibility="gone"
                    android:text="@string/email_message_code_valid"
                    android:textSize="12sp"
                    android:textColor="@android:color/holo_green_dark"/>

                <TextView
                    android:id="@+id/email_message_request"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="4dp"
                    android:visibility="gone"
                    android:text="@string/email_message_request"
                    android:textSize="12sp"
                    android:textColor="@android:color/holo_red_dark"/>

                <LinearLayout
                    android:id="@+id/email_code_chronometer_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="4dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/carrot"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:text="@string/email_code_chronometer_label"/>

                    <Chronometer
                        android:id="@+id/email_code_chronometer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingStart="4dp"
                        android:countDown="true"
                        android:textColor="@color/carrot"
                        android:textStyle="bold"
                        android:textSize="12sp"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>