<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/account_photo_type_select"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/close_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_close_24"
            android:background="?selectableItemBackgroundBorderless"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/upload_photo_button"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_with_radius"
            android:drawableTop="@drawable/ic_baseline_photo_library_36"
            android:paddingTop="12dp"
            android:text="@string/account_photo_by_gallery" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/use_default_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_with_radius"
            android:drawableTop="@drawable/ic_baseline_account_circle_36"
            android:paddingTop="12dp"
            android:text="@string/account_photo_by_default" />

    </LinearLayout>


</LinearLayout>